--- a/src/projects/detail/components/SimplePlan/components/MilestoneChallengeRow/MilestoneChallengeRow.scss
+++ b/src/projects/detail/components/SimplePlan/components/MilestoneChallengeRow/MilestoneChallengeRow.scss
@@ -34,6 +34,7 @@
       &.Registration { background-color: $tc-orange-100; }
       &.Appeals { background-color: $tc-orange-100; }
       &.AppealsResponse { background-color: $tc-orange-100; }
+      &.Post-Mortem { background-color: $tc-orange-100; }
       &.Draft { background-color: $tc-gray-20; }
       &.Stalled { background-color: $tc-gray-20; }
       &.Completed { background-color: $tc-green-100; }
